--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .section-padding {
-    padding: 80px 0;
+    padding: 20px 0px 80px 0;
 }
 
 .user-information-form-wrap {
@@ -130,6 +130,10 @@ body {
         input:focus {
             border-color: #87b106;
             background-color: #fff;
+        }
+
+        input.dangerous {
+            border-color: red;
         }
 
         select.form-control {
