--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -86,6 +86,14 @@ body {
         line-height: 1.2;
     }
 
+    .leftIcon {
+        margin-left: 20px;
+    }
+
+    .rightIcon {
+        margin-right: 20px;
+    }
+
     .box {
         width: 200px;
         height: 200px;
