--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -438,3 +438,182 @@ body {
         }
     }
 }
+
+.writing {
+    width: 320px;
+    height: 200px;
+    background-color: #3f3f3f;
+    border: 1px solid #bbbbbb;
+    border-radius: 6px 6px 4px 4px;
+    position: relative;
+
+    .topbar {
+        position: absolute;
+        width: 100%;
+        height: 12px;
+        background-color: #f1f1f1;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+
+        div {
+            height: 6px;
+            width: 6px;
+            border-radius: 50%;
+            margin: 3px;
+            float: left;
+        }
+
+        div.green {
+            background-color: #60d060;
+        }
+
+        div.red {
+            background-color: red;
+        }
+
+        div.yellow {
+            background-color: #e6c015;
+        }
+    }
+
+    .code {
+        padding: 15px;
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+
+            li {
+                background-color: #9e9e9e;
+                width: 0;
+                height: 7px;
+                border-radius: 6px;
+                margin: 10px 0;
+            }
+        }
+    }
+}
+
+.error-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 73vh;
+    width: 100%;
+    transition: transform .5s;
+
+    .stack-container {
+        position: relative;
+        width: 420px;
+        height: 210px;
+        transition: width 1s, height 1s;
+    }
+
+    .pokeup {
+        transition: all .3s ease;
+    }
+    
+    .pokeup:hover {
+        transform: translateY(-10px);
+        transition: .3s ease;
+    }
+
+    .error {
+        width: 400px;
+        padding: 40px;
+        text-align: center;
+    
+        h1 {
+            font-size: 125px;
+            padding: 0;
+            margin: 0;
+            font-weight: 700;
+        }
+    
+        h2 {
+            margin: -30px 0 0 0;
+            padding: 0px;
+            font-size: 47px;
+            letter-spacing: 12px;
+        }
+    }
+    
+    .perspec {
+        perspective: 1000px;
+    }
+    
+    .writeLine {
+        animation: writeLine .4s linear forwards;
+    }
+    
+    .explode {
+        animation: explode .5s ease-in-out forwards;
+    }
+    
+    .card {
+        animation: tiltcard .5s ease-in-out 1s forwards;
+        position: absolute;
+    }
+    
+    @keyframes tiltcard {
+        0% {
+            transform: rotateY(0deg);
+        }
+    
+        100% {
+            transform: rotateY(-30deg);
+        }
+    }
+    
+    @keyframes explode {
+        0% {
+            transform: translate(0, 0) scale(1);
+        }
+    
+        100% {
+            transform: translate(var(--spreaddist), var(--vertdist)) scale(var(--scaledist));
+        }
+    }
+    
+    @keyframes writeLine {
+        0% {
+            width: 0;
+        }
+    
+        100% {
+            width: var(--linelength);
+        }
+    }
+    
+    @media screen and (max-width: 1000px) {
+        .error-container {
+            transform: scale(.85);
+        }
+    }
+    
+    @media screen and (max-width: 850px) {
+        .error-container {
+            transform: scale(.75);
+        }
+    }
+    
+    @media screen and (max-width: 775px) {
+        .error-container {
+            flex-wrap: wrap-reverse;
+            align-items: inherit;
+        }
+    }
+    
+    @media screen and (max-width: 370px) {
+        .error-container {
+            transform: scale(.6);
+        }
+    }
+}
+
+
+
+
+
+
