优化商品取消收藏

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -210,7 +210,7 @@ body {
     }
 }
 
-.products-index-page {
+.products-index-page, .products-favorites-page {
     .pagination {
         margin-right: 5px;
     }
@@ -611,9 +611,3 @@ body {
         }
     }
 }
-
-
-
-
-
-
