--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -301,6 +301,24 @@ body {
         padding: 30px 0;
     }
 
+    .cover-min {
+        width: 80%;
+        border: solid 0px #eee;
+    }
+
+    .description {
+        height: 100%;
+        list-style: none;
+        margin-bottom: 20%;
+
+        li {
+            width: 25%;
+            margin-right: 50px;
+            font-size: 12px;
+            float: left;
+        }
+    }
+
     .title {
         font-size: 24px;
         font-weight: bold;
