--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,6 +29,7 @@ body {
     border-bottom: 1px solid #e8e8e8;
     margin-bottom: 40px;
     margin-top: 0px;
+    font-weight: bolder;
 }
 
 /* Sticky footer styles */
@@ -63,6 +64,10 @@ body {
             }
         }
     }
+}
+
+.carousel-inner {
+    text-align: center;
 }
 
 .carousel-inner img {
@@ -683,6 +688,31 @@ body {
         input.amount {
             width: 60px;
             border-radius: 0 !important;
+        }
+    }
+}
+
+#bigImg {
+    margin-bottom: 5%;
+}
+
+.slider-1 {
+    max-width: 349px;
+    transform: translate3d(0px, 0px, 0px);
+    display: block;
+
+    .li {
+        max-width: 24%;
+        max-height: 24%;
+        text-align: center;
+        display: inline-block;
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 0.7;
+        cursor: pointer;
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
         }
     }
 }
