--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -864,4 +864,14 @@ body {
             color: red;
         }
     }
+
+    .payment-buttons {
+        margin-top: 10px;
+        padding-right: 10px;
+    }
+}
+
+.prompt strong {
+    font-size: 12px;
+    color: red;
 }
