--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -869,6 +869,12 @@ body {
         margin-top: 10px;
         padding-right: 10px;
     }
+
+    .payment-buttons,
+    .receive-button {
+        margin-top: 10px;
+        padding-right: 10px;
+    }
 }
 
 .prompt strong {
