用户界面 - 申请退款

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -875,6 +875,13 @@ body {
         margin-top: 10px;
         padding-right: 10px;
     }
+
+    .payment-buttons,
+    .receive-button,
+    .refund-button {
+        margin-top: 10px;
+        padding-right: 10px;
+    }
 }
 
 .prompt strong {
