--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -217,12 +217,7 @@ body {
     }
 }
 
-.products-index-page,
-.products-favorites-page {
-    .pagination {
-        margin-right: 5px;
-    }
-
+@mixin product-list {
     .products-list {
         padding: 0 15px;
 
@@ -294,6 +289,15 @@ body {
             }
         }
     }
+}
+
+.products-index-page,
+.products-favorites-page {
+    .pagination {
+        margin-right: 5px;
+    }
+
+    @include product-list;
 
     .search-form {
         padding: 0 5px 10px;
@@ -559,6 +563,18 @@ body {
 
     .product-description img {
         max-width: 100%;
+    }
+
+    .similar-products {
+        @include product-list;
+
+        .title {
+            font-weight: normal;
+        }
+
+        .price {
+            background-color: unset;
+        }
     }
 }
 
