--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -315,7 +315,7 @@ body {
         .category {
             font-size: 12px;
             height: 22px;
-            border: 1px solid #eee;
+            border: 1px solid rgb(255, 255, 255);
             padding: 4px;
             color: #666;
 
