--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,11 @@
 
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
+@font-face {
+    font-family: edo;
+    src: url(/fonts/edo.ttf);
+}
+
 /* universal */
 
 body {
@@ -43,7 +48,7 @@ body {
     margin-bottom: 60px;
 }
 
-#app > .container {
+#app>.container {
     margin-bottom: 300px;
 }
 
@@ -78,7 +83,7 @@ body {
 
                 a {
                     color: white;
-                    text-decoration:none;
+                    text-decoration: none;
                 }
 
                 a:hover {
@@ -95,7 +100,7 @@ body {
             p {
                 margin: 19px 0;
                 color: #c1c1c1;
-    
+
                 a {
                     color: inherit;
                 }
@@ -1177,4 +1182,186 @@ body {
 
 .navbar-collapse .nav-style:hover {
     color: rgba(0, 0, 0, 0.7);
+}
+
+.hg {
+    position: relative;
+    padding: 0;
+    padding-top: 1px;
+    width: 100%;
+    background: #f29b2a;
+    z-index: -1;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        text-align: center;
+        overflow: hidden;
+    }
+
+    h4 {
+        font-size: 2rem;
+    }
+
+    .edo {
+        font-family: edo;
+    }
+
+    .bottom {
+        background: white;
+        width: 100%;
+        position: absolute;
+        top: 66%;
+        height: 34%;
+        z-index: -2;
+    }
+
+    .inner .float-layer {
+        overflow: hidden;
+        color: aliceblue;
+    }
+
+    .inner .logo-layer {
+        width: 90%;
+        padding: 5%;
+        margin: 0 auto;
+        box-sizing: content-box;
+    }
+}
+
+@media screen and (min-width: 750px) {
+    .hg {
+        overflow: hidden;
+    }
+
+    .hg .inner {
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: 3rem;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .hg .inner .float-layer {
+        font-size: 4rem;
+        color: aliceblue;
+        position: absolute;
+        margin-left: 1rem;
+
+    }
+
+    .hg .inner .logo-layer {
+        max-width: 500px;
+        float: right;
+        z-index: -1;
+        padding-top: 0;
+    }
+
+    .hg .inner .float-layer h1 {
+        font-size: 10rem;
+    }
+
+    .hg .inner .float-layer h4 {
+        font-size: 3rem;
+    }
+
+    .hg .inner .float-layer h6 {
+        font-size: 1.2rem;
+    }
+
+}
+
+
+#app>.container>.similar-products {
+    .show-title {
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        margin-top: 40px;
+        height: 32px;
+        line-height: 16px;
+        max-height: 32px;
+    }
+
+    .price {
+        background-color: unset;
+    }
+
+    .products-list {
+        padding: 0 15px;
+        width: 80%;
+        margin: 0 auto;
+
+        .product-item {
+            padding: 0 5px;
+            margin-bottom: 10px;
+
+            .product-content {
+                border: 1px solid #eee;
+
+                .top {
+                    padding: 5px;
+
+                    img {
+                        width: 100%;
+                    }
+
+                    .price {
+                        margin-top: 5px;
+                        font-size: 20px;
+                        color: #ff0036;
+
+                        b {
+                            font-size: 14px;
+                        }
+                    }
+
+                    .title {
+                        margin-top: 10px;
+                        height: 32px;
+                        line-height: 16px;
+                        max-height: 32px;
+
+                        a {
+                            font-size: 12px;
+                            line-height: 14px;
+                            color: #333;
+                            text-decoration: none;
+                        }
+                    }
+                }
+
+                .bottom {
+                    font-size: 12px;
+                    display: flex;
+
+                    .sold_count span {
+                        color: #b57c5b;
+                        font-weight: bold;
+                    }
+
+                    .review_count span {
+                        color: #38b;
+                        font-weight: bold;
+                    }
+
+                    &>div {
+
+                        &:first-child {
+                            border-right: 1px solid #eee;
+                        }
+
+                        padding: 10px 5px;
+                        line-height: 12px;
+                        flex-grow: 1;
+                        border-top: 1px solid #eee;
+                    }
+                }
+            }
+        }
+    }
 }
