--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1685,3 +1685,23 @@ body {
         }
     }
 }
+
+.simditor-body img {
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+@import "topic_body";
+
+.topics-show-page {
+
+    .card {
+        padding: 15px;
+
+        h1 {
+            margin: 0.4em auto 0.6em;
+            font-size: 28px;
+            line-height: 38px;
+        }
+    }
+}
