--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1716,3 +1716,17 @@ body {
         color: #b3b3b3;
     }
 }
+
+.notification-badge {
+    .badge {
+        font-size: 12px;
+    }
+
+    .badge-secondary {
+        background-color: #EBE8E8;
+    }
+
+    .badge-hint {
+        background-color: #d15b47 !important;
+    }
+}
