装机配置表创建

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1928,6 +1928,10 @@ body {
                     margin-right: 10px;
                 }
             }
+
+            .products-count {
+                padding-left: 200px;
+            }
         }
 
         .category-items {
