优化众筹逻辑

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -965,6 +965,10 @@ body {
     }
 }
 
+.swal-overlay>.swal-modal>.swal-text {
+    font-size: 24px;
+}
+
 .writing {
     width: 320px;
     height: 200px;
